Development
    Fix saving and loading of preferred VO
    Fix 'f' not going to/returning from fullscreen
    Remove the use of mplayer profiles, as they are no longer needed
    Fix Issue 544, minor spelling issue
    Allow customization of some of the keyboard hotkeys, more to be done
    Replace get_window, get_visible, and get_allocation with gmtk versions
    Build foundation for customized hotkeys
    Add checkboxes for hardware and crystalhd codec support
    Conversion to using libgmtk as separate library
    Fix Issue #538
    Autodetect gtk3 at configure time
    Raise event on incomplete QuickTime file, and mark it for retry
    Fix compile issue with alsa is not being used
1.0.4
    Remove vdpau failure detection as it doesn't work
    Quit mplayer on vdpau restart, mplayer doesn't want to die
    Restart mplayer on vdpau create error
    Try and set the initial window size prior to loading the media, may fix vdpau issues
    Fix AC3 passthru, option was not being set, Issue #533
    Fix default filename in context menu. Issue #531
    Enable Save in popup menu with control id is specified but not window, useful for scripting
    Updated Portuguese translation
    Added a missing string to the Polish translation
    Correct invalid label, and update po files
    Updated Polish translation
    Move notification of export filename to occur later
    Track export filename across mplayer restarts
    Updated Turkish translation
1.0.4b2
    Update translations from launchpad
    Add Vietnamese translation
    Move -profile gnome-mplayer into the vo setting area, allows gnome-mplayer to work without preferences set
    Add in new media state, MEDIA_STATE_BUFFERING
    Updated Japanese Translation
    dbus - fixup GetPlayState to give more correct values
    dbus - add GetCachePercent method
    libgmtk - gmtk_media_player add ATTRIBUTE_CACHE_PERCENT
    Tell mplayer to ignore the xscreensaver, as gnome-mplayer controls it